--- a/index.html
+++ b/index.html
@@ -127,9 +127,11 @@ Author: ChatGPT (GPT-5 Thinking mini)
         </div>
       </div>
       <nav class="nav">
-        <a class="btn-ghost" href="#how">How it works</a>
         <a class="btn-ghost" href="#sample">Sample</a>
         <a class="btn" href="#buy">Get your scorecard</a>
+        <a class="btn-ghost" href="#how">About</a>
+        <a class="btn-ghost" href="#how">Contact</a>
+        <a class="btn-ghost" href="#how">How it works</a>        
       </nav>
     </header>
 
@@ -346,4 +348,3 @@ Author: ChatGPT (GPT-5 Thinking mini)
   </script>
 </body>
 </html>
-
