--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ Author: ChatGPT (GPT-5 Thinking mini)
         <a class="btn-ghost" href="#sample">Sample</a>
         <a class="btn-ghost" href="#how">How it works</a>
         <a class="btn" href="#buy">Get your scorecard</a>
-        <a class="btn-ghost" href="about.html">About</a>
+        <a class="btn-ghost" href="#how">About</a>
         <a class="btn-ghost" href="#how">Contact</a>                
       </nav>
     </header>
