--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ Author: ChatGPT (GPT-5 Thinking mini)
     <section id="sample" class="sample fade-up">
       <div class="report-preview">
         <!-- sample visual (use your own PDF preview image) -->
-        <img src="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='800' height='500'><rect rx='14' ry='14' width='100%' height='100%' fill='%23fff'/><text x='50' y='60' font-family='Merriweather' font-weight='700' font-size='26' fill='%230f172a'>LagnaDuo — Sample Report</text><text x='50' y='110' font-family='Inter' font-size='14' fill='%236b7280'>Shared Future Score: 78</text><rect x='50' y='140' width='700' height='12' rx='6' fill='%237c5cff'/></svg>" alt="Sample report preview">
+        <img src="images/preview_image.png" alt="Sample report preview">
       </div>
       <div style="flex:1">
         <h3>What’s inside the report</h3>
