Replace image with clickable preview link

--- a/index.html
+++ b/index.html
@@ -213,8 +213,14 @@ Author: ChatGPT (GPT-5 Thinking mini)
     <!-- SAMPLE REPORT -->
     <section id="sample" class="sample fade-up">
       <div class="report-preview">
-        <!-- sample visual (use your own PDF preview image) -->
-        <img src="images/preview_image.png" alt="Sample report preview">
+        <a href="images/preview_image.png" target="_blank" class="preview-link">
+          <figure>
+            <img src="images/preview_image.png" 
+           alt="LagnaDuo Sample Report Preview"
+           style="width:100%; max-width:800px; height:auto; border-radius:14px; display:block; margin:0 auto;">
+            <figcaption>Click below to enlarge</figcaption>
+          </figure>
+        </a>
       </div>
       <div style="flex:1">
         <h3>What’s inside the report</h3>
