Update figcaption text for clarity

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ Author: ChatGPT (GPT-5 Thinking mini)
             <img src="images/preview_image.png" 
            alt="LagnaDuo Sample Report Preview"
            style="width:100%; max-width:800px; height:auto; border-radius:14px; display:block; margin:0 auto;">
-            <figcaption>Click below to enlarge</figcaption>
+            <figcaption>Click to enlarge</figcaption>
           </figure>
         </a>
       </div>
