--- a/index.html
+++ b/index.html
@@ -97,88 +97,44 @@
     /* badges */
     .badge{display:inline-flex;align-items:center;padding:6px 10px;border-radius:999px;background:rgba(16,24,40,0.04);font-weight:600}
 
-    /* ==================== MODAL STYLES ==================== */
-    .modal-overlay {
-      display: none;
-      position: fixed;
-      top: 0; left: 0; right: 0; bottom: 0;
-      background: rgba(15,23,42,0.88);
-      backdrop-filter: blur(8px);
-      align-items: center;
-      justify-content: center;
-      z-index: 9999;
-      padding: 20px;
-      opacity: 0;
-      transition: opacity 0.3s ease;
+    /* ======================= NEW BEAUTIFUL MODAL (exactly like your other site) ======================= */
+    .ld-modal-backdrop{
+      position:fixed; inset:0; background:rgba(12,18,30,0.45); backdrop-filter:blur(6px);
+      display:none; align-items:center; justify-content:center; z-index:9999; padding:20px;
     }
-    .modal-overlay.show {
-      display: flex;
-      opacity: 1;
+    .ld-modal-backdrop.show{ display:flex; }
+    .ld-modal{
+      width:98%; max-width:1100px; background:var(--card); border-radius:14px; overflow:hidden;
+      box-shadow:0 20px 60px rgba(0,0,0,0.35); display:flex; flex-direction:column; max-height:94vh;
     }
-    .modal-content {
-      position: relative;
-      max-width: 90vw;
-      max-height: 90vh;
-      background: white;
-      border-radius: 16px;
-      overflow: hidden;
-      box-shadow: 0 20px 60px rgba(0,0,0,0.3);
+    .ld-modal .modal-header{
+      display:flex; align-items:center; justify-content:space-between; padding:14px 20px;
+      border-bottom:1px solid rgba(15,23,42,0.06); background:#fcfbff;
     }
-    .modal-content img {
-      width: 100%;
-      height: auto;
-      max-height: 90vh;
-      display: block;
+    .ld-modal .modal-header h3{
+      margin:0; font-family:Merriweather; font-size:20px; font-weight:700; color:var(--text);
     }
-    .close-modal {
-      position: absolute;
-      top: 12px;
-      right: 12px;
-      width: 40px;
-      height: 40px;
-      background: rgba(15,23,42,0.7);
-      color: white;
-      border: none;
-      border-radius: 50%;
-      font-size: 24px;
-      cursor: pointer;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      z-index: 10;
-      transition: background 0.2s;
+    .ld-modal .modal-body{
+      padding:16px; overflow:auto; background:#fff; text-align:center;
     }
-    .close-modal:hover {
-      background: rgba(15,23,42,0.9);
+    .ld-modal .modal-body img{
+      max-width:100%; height:auto; border-radius:10px; box-shadow:0 8px 30px rgba(0,0,0,0.12);
     }
-    .close-bottom {
-      position: absolute;
-      bottom: 16px;
-      right: 16px;
-      padding: 10px 20px;
-      background: var(--accent);
-      color: white;
-      border: none;
-      border-radius: 10px;
-      font-weight: 600;
-      cursor: pointer;
+    .modal-footer{
+      padding:14px 20px; display:flex; justify-content:space-between; align-items:center;
+      border-top:1px solid rgba(15,23,42,0.06); background:linear-gradient(180deg, rgba(255,255,255,0.7), rgba(250,250,253,0.7));
+      font-size:13px; color:var(--muted);
     }
-    /* caption style inside modal */
-    .modal-caption {
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      background: rgba(15,23,42,0.8);
-      color: white;
-      padding: 14px 20px;
-      text-align: center;
-      font-size: 15px;
-      font-family: Inter, sans-serif;
+    .modal-footer button{
+      background:var(--accent); color:white; border:none; padding:9px 18px;
+      border-radius:10px; font-weight:600; cursor:pointer; font-size:14px;
     }
-    @media (max-width: 720px) {
-      .close-modal { width: 36px; height: 36px; font-size: 20px; }
-      .close-bottom { padding: 10px 16px; font-size: 14px; }
+    .modal-footer button:hover{ background:#6b5ce6; }
+    @media (max-width:720px){
+      .ld-modal{ border-radius:10px; }
+      .modal-header{ padding:12px 16px; }
+      .modal-body{ padding:12px; }
+      .modal-footer{ flex-direction:column; gap:10px; text-align:center; }
     }
   </style>
 </head>
@@ -296,6 +252,9 @@
       </div>
     </section>
 
+    <!-- COMPARISON, PRICING, TESTIMONIALS, FAQ, FOOTER (unchanged) -->
+    <!-- ... [all your existing sections exactly as before] ... -->
+
     <!-- COMPARISON -->
     <section class="comparison fade-up" id="how">
       <h3 style="margin-top:0">Compatibility Reports vs LagnaDuo</h3>
@@ -304,9 +263,9 @@
           <tr><th>Feature</th><th>Standard Compatibility</th><th>LagnaDuo</th></tr>
         </thead>
         <tbody>
-          <tr><td>Attraction / Synastry</td><td>Check</td><td>Check</td></tr>
-          <tr><td>Living-together harmony</td><td>Cross</td><td>Check</td></tr>
-          <tr><td>Daily rhythm prediction</td><td>Cross</td><td>Check</td></tr>
+          <tr><td>Attraction / Synastry</td><td>Yes</td><td>Yes</td></tr>
+          <tr><td>Living-together harmony</td><td>No</td><td>Yes</td></tr>
+          <tr><td>Daily rhythm prediction</td><td>No</td><td>Yes</td></tr>
           <tr><td>Practical remedies</td><td>Limited</td><td>Detailed</td></tr>
           <tr><td>Deliverable</td><td>Reading</td><td>PDF scorecard</td></tr>
         </tbody>
@@ -340,7 +299,7 @@
       <h3>What readers say</h3>
       <div class="testimonials">
         <div class="testimonial">
-          <div style="font-weight:700">A. &amp; M. (Mumbai)</div>
+          <div style="font-weight:700">A. & M. (Mumbai)</div>
           <div class="small">“LagnaDuo showed us exactly why our routines clashed. We fixed two habits and our home became peaceful.”</div>
         </div>
         <div class="testimonial">
@@ -383,51 +342,62 @@
     </footer>
   </div>
 
-  <!-- MODAL -->
-  <div class="modal-overlay" id="sampleModal">
-    <div class="modal-content">
-      <button class="close-modal" aria-label="Close">×</button>
-      <img src="images/LagnaDuo_sample_score_covered_new1.png" alt="LagnaDuo Full Sample Report">
-      <div class="modal-caption">LagnaDuo Sample Report — Full View</div>
-      <button class="close-bottom close-modal">Close</button>
+  <!-- NEW BEAUTIFUL MODAL -->
+  <div id="ld-modal-backdrop" class="ld-modal-backdrop">
+    <div class="ld-modal">
+      <div class="modal-header">
+        <div>
+          <h3>LagnaDuo — Sample Scorecard</h3>
+          <div style="font-size:13px; color:var(--muted); margin-top:4px;">Full preview • Exact format delivered after purchase</div>
+        </div>
+        <button class="btn-ghost modal-close">Close</button>
+      </div>
+      <div class="modal-body">
+        <img src="images/LagnaDuo_sample_score_covered_new1.png" alt="LagnaDuo Sample Report Full View">
+      </div>
+      <div class="modal-footer">
+        <div>Tip: This is the exact two-page PDF you will receive — concise, clear, and actionable.</div>
+        <button class="modal-close">Close</button>
+      </div>
     </div>
   </div>
 
   <script>
-    // Open modal
-    document.querySelectorAll('.open-modal').forEach(link => {
+    // Modal controls
+    const modal = document.getElementById('ld-modal-backdrop');
+    const openLinks = document.querySelectorAll('.open-modal');
+    const closeBtns = document.querySelectorAll('.modal-close');
+
+    openLinks.forEach(link => {
       link.addEventListener('click', e => {
         e.preventDefault();
-        document.getElementById('sampleModal').classList.add('show');
-        document.body.style.overflow = 'hidden'; // prevent background scroll
+        modal.classList.add('show');
+        document.body.style.overflow = 'hidden';
       });
     });
 
-    // Close modal
-    document.querySelectorAll('.close-modal').forEach(btn => {
+    closeBtns.forEach(btn => {
       btn.addEventListener('click', () => {
-        document.getElementById('sampleModal').classList.remove('show');
+        modal.classList.remove('show');
         document.body.style.overflow = '';
       });
     });
 
-    // Close on overlay click
-    document.getElementById('sampleModal').addEventListener('click', e => {
-      if (e.target === document.getElementById('sampleModal')) {
-        document.getElementById('sampleModal').classList.remove('show');
+    modal.addEventListener('click', e => {
+      if (e.target === modal) {
+        modal.classList.remove('show');
         document.body.style.overflow = '';
       }
     });
 
-    // Close on Escape key
     document.addEventListener('keydown', e => {
-      if (e.key === 'Escape' && document.getElementById('sampleModal').classList.contains('show')) {
-        document.getElementById('sampleModal').classList.remove('show');
+      if (e.key === 'Escape' && modal.classList.contains('show')) {
+        modal.classList.remove('show');
         document.body.style.overflow = '';
       }
     });
 
-    // Existing scripts (placeholders warning + smooth scroll + fade-up)
+    // Existing scripts (placeholders, smooth scroll, fade-up)
     const placeholders = ['CASHFREE_LINK','PAYPAL_LINK'];
     placeholders.forEach(id=>{
       if(document.body.innerHTML.includes(id)){
@@ -436,7 +406,7 @@
     });
 
     document.querySelectorAll('a[href^="#"]').forEach(a=>{
-      if (!a.classList.contains('open-modal')) {
+      if (!a.classList.contains('open-modal') && !a.classList.contains('modal-close')) {
         a.addEventListener('click', e=>{
           e.preventDefault();
           const t = document.querySelector(a.getAttribute('href'));
