--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
           <h3>LagnaDuo — Sample Scorecard</h3>
           <div style="font-size:13px; color:var(--muted); margin-top:4px;">Full preview • Exact format delivered after purchase</div>
         </div>
-        <button class="btn-ghost modal-close">Close</button>
+        <button class="modal-close">Close</button>
       </div>
       <div class="modal-body">
         <img src="images/LagnaDuo_sample_score_covered_new1.png" alt="LagnaDuo Sample Report Full View">
