--- a/index.html
+++ b/index.html
@@ -350,8 +350,9 @@
           <h3>LagnaDuo — Sample Scorecard</h3>
           <div style="font-size:13px; color:var(--muted); margin-top:4px;">Full preview • Exact format delivered after purchase</div>
         </div>
-        <button class="modal-close">Close</button>
+        <!--<button class="modal-close">Close</button>-->
       </div>
+      <button class="modal-close">Close</button>
       <div class="modal-body">
         <img src="images/LagnaDuo_sample_score_covered_new1.png" alt="LagnaDuo Sample Report Full View">
       </div>
