Remove duplicate close button in modal
Comment out duplicate close button in modal

--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
         </div>
         <button class="modal-close">Close</button>
       </div>
-      <button class="modal-close">Close</button>      
+      <!--<button class="modal-close">Close</button> -->  
         <img src="images/LagnaDuo_sample_score_covered_new1.png" alt="LagnaDuo Sample Report Full View">
       </div>
       <div class="modal-footer">
