--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     .ld-modal .modal-header{
       display:flex; align-items:center; justify-content:space-between; padding:14px 20px;
       border-bottom:1px solid rgba(15,23,42,0.06); background:#fcfbff;
-    }    
+    }
     .ld-modal .modal-header h3{
       margin:0; font-family:Merriweather; font-size:20px; font-weight:700; color:var(--text);
     }
@@ -350,9 +350,9 @@
           <h3>LagnaDuo — Sample Scorecard</h3>
           <div style="font-size:13px; color:var(--muted); margin-top:4px;">Full preview • Exact format delivered after purchase</div>
         </div>
-        <button class="modal-close">Close</button>
+        <button class="btn-ghost modal-close">Close</button>
       </div>
-      <!--<button class="modal-close">Close</button> -->  
+      <div class="modal-body">
         <img src="images/LagnaDuo_sample_score_covered_new1.png" alt="LagnaDuo Sample Report Full View">
       </div>
       <div class="modal-footer">
