Update button styles in index.html

--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
           <h3>LagnaDuo — Sample Scorecard</h3>
           <div style="font-size:13px; color:var(--muted); margin-top:4px;">Full preview • Exact format delivered after purchase</div>
         </div>
-        <button class="btn-ghost modal-close" style="background-color: var(--accent); font-size: 0.9rem; color: white; padding:10px 16px; box-shadow:var(--shadow);border:0; cursor: pointer; font-weight: 600;">Close</button>
+        <button class="btn-ghost modal-close" style="background-color: #7c5cff; font-size: 0.9rem; color: white; padding:8px 16px; box-shadow:var(--shadow);border:0; cursor: pointer; font-weight: 600;">Close</button>
       </div>
       <div class="modal-body">
         <img src="images/LagnaDuo_sample_score_covered_new1.png" alt="LagnaDuo Sample Report Full View">
