Update payment links in index.html

--- a/index.html
+++ b/index.html
@@ -198,8 +198,8 @@
             <div class="small">Long-term destiny alignment present</div>
           </div>
           <div style="display:flex;flex-direction:column;gap:8px;">
-            <a class="buy-btn buy-local" id="cashfree" href="CASHFREE_LINK" target="_blank" rel="noopener noreferrer">Buy in India — ₹1100</a>
-            <a class="buy-btn buy-int" id="paypal" href="PAYPAL_LINK" target="_blank" rel="noopener noreferrer">Buy International — $15</a>
+            <a class="buy-btn buy-local" id="cashfree" href="https://payments.cashfree.com/forms?code=LagnaDuo" target="_blank" rel="noopener noreferrer">Buy in India — ₹1100</a>
+            <a class="buy-btn buy-int" id="paypal" href="https://www.paypal.com/ncp/payment/T8PX5CSKCEJYS" target="_blank" rel="noopener noreferrer">Buy International — $15</a>
             <div class="small">After purchase you will receive an instant PDF via email.</div>
           </div>
         </div>
@@ -279,7 +279,7 @@
         <div class="price">₹1100</div>
         <div class="small">One-time PDF report for shared living analysis (India)</div>
         <div style="margin-top:12px;display:flex;gap:8px;align-items:center">
-          <a class="buy-btn buy-local" href="CASHFREE_LINK" id="cashfree-2" target="_blank" rel="noopener noreferrer">Buy (India) — Pay with Cashfree</a>
+          <a class="buy-btn buy-local" href="https://payments.cashfree.com/forms?code=LagnaDuo" id="cashfree-2" target="_blank" rel="noopener noreferrer">Buy (India) — Pay with Cashfree</a>
         </div>
       </div>
       <div class="price-card">
@@ -287,7 +287,7 @@
         <div class="price">$15</div>
         <div class="small">Instant PDF delivered by email</div>
         <div style="margin-top:12px;display:flex;gap:8px;align-items:center">
-          <a class="buy-btn buy-int" href="PAYPAL_LINK" id="paypal-2" target="_blank" rel="noopener noreferrer">Buy (International) — Pay with PayPal</a>
+          <a class="buy-btn buy-int" href="https://www.paypal.com/ncp/payment/T8PX5CSKCEJYS" id="paypal-2" target="_blank" rel="noopener noreferrer">Buy (International) — Pay with PayPal</a>
         </div>
       </div>
       <div style="flex-basis:100%"></div>
