Revise text content in index.html
Updated various text elements for clarity and accuracy.

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
           <a class="btn-ghost open-modal" href="#">Preview sample</a>
         </div>
         <div style="margin-top:18px;display:flex;gap:12px;align-items:center" class="fade-up">
-          <div class="badge">Instant PDF</div>
+          <div class="badge">PDF Delivery</div>
           <div class="badge">Secure Checkout</div>
           <div class="badge">Works Worldwide</div>
         </div>
@@ -215,11 +215,11 @@
         </div>
         <div class="feature fade-up">
           <strong>Daily Rhythm Alignment</strong>
-          <p>Predicts whether routines, sleep, and work cycles will harmonize or collide.</p>
+          <p>Number shows how much routines, sleep, and work cycles can harmonize/collide.</p>
         </div>
         <div class="feature fade-up">
-          <strong>Emotional Recovery Score</strong>
-          <p>Shows which partner naturally stabilizes emotional dips and why.</p>
+          <strong>Daily Living Score</strong>
+          <p>How much money, home, parenting, health, daily routines match.</p>
         </div>
       </div>
     </section>
@@ -237,13 +237,13 @@
         </a>
       </div>
       <div style="flex:1">
-        <h3>What’s inside the report</h3>
+        <h3>What The Score Tells You</h3>
         <ul class="small">
-          <li>Overall Shared Future Score (0–100)</li>
-          <li>Space-time harmony by house</li>
-          <li>Routines & rhythm compatibility</li>
+          <li>Overall Shared Future Score (0–250)</li>
+          <li>Quantifies space-time harmony by house</li>
+          <li>Potential for routines & rhythm merger</li>
           <li>Top 3 red flags and actionable remedies</li>
-          <li>18-month harmony timeline</li>
+          <li>Whole-life potential for daily living</li>
         </ul>
         <div style="margin-top:12px">
           <a class="btn" href="#buy">Get your full report</a>
@@ -260,13 +260,13 @@
       <h3 style="margin-top:0">Compatibility Reports vs LagnaDuo</h3>
       <table>
         <thead>
-          <tr><th>Feature</th><th>Standard Compatibility</th><th>LagnaDuo</th></tr>
+          <tr><th>Feature</th><th>Standard Compatibility (36-point system)</th><th>LagnaDuo (250-points system)</th></tr>
         </thead>
         <tbody>
           <tr><td>Attraction / Synastry</td><td>Yes</td><td>Yes</td></tr>
           <tr><td>Living-together harmony</td><td>No</td><td>Yes</td></tr>
           <tr><td>Daily rhythm prediction</td><td>No</td><td>Yes</td></tr>
-          <tr><td>Practical remedies</td><td>Limited</td><td>Detailed</td></tr>
+          <tr><td>Practical daily life matters</td><td>Limited</td><td>Detailed</td></tr>
           <tr><td>Deliverable</td><td>Reading</td><td>PDF scorecard</td></tr>
         </tbody>
       </table>
