Refine hero description in index.html
Updated hero description to enhance clarity about the service.

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     <section class="hero">
       <div class="hero-left">
         <h1 class="fade-up">Discover your <span style="color:var(--accent)">Shared Future</span> — beyond compatibility</h1>
-        <p class="hero-desc small fade-up">A modern Vedic astrology scorecard that predicts whether two people can peacefully live together — not just whether they like each other.</p>
+        <p class="hero-desc small fade-up">A modern Vedic astrology scorecard that predicts whether two people can peacefully live together — not just whether they like each other. It's living-together, daily life harmony.</p>
         <div class="hero-cta fade-up">
           <a class="btn" href="#buy">Get Your Scorecard — ₹1100 / $15</a>
           <a class="btn-ghost open-modal" href="#">Preview sample</a>
