--- a/about_contact.html
+++ b/about_contact.html
@@ -145,14 +145,21 @@
 
         <h2>About the Author</h2>
         <p>
-          Welcome to Astrology of Bharat. I am a dedicated practitioner of Vedic Astrology (Jyotish Shastra), focused on deciphering the cosmic codes that influence human life. My journey began with a deep curiosity about the intersection of karma, free will, and planetary influences. Over the years, I have studied ancient texts and applied these timeless principles to modern living.
+          Partho Banerjee is a Jyotishi or Vedic astrologer as popularly called these days, as well as passionate applications software expert dedicated to making actionable Jyotish tools accessible to all.
+
+This Astrology software is created, owned, managed and maintained by Partho Banerjee, that’s me. LagnaOne is designed to grow for and with the Jyotish community.
         </p>
         <p>
-          My approach is rooted in the belief that astrology is not just about prediction, but about preparation. By understanding the energetic patterns of our birth charts, we can make more informed decisions, navigate challenges with grace, and maximize our potential. I strive to provide readings that are honest, practical, and devoid of fear-mongering.
+          My journey in IT: I have been a full time IT and software professional for 14 years and have done Master's in Computer Applications. I am certified corporate IT trainer by Indian Institute of Technology (IIT) Kanpur, India and IBM Corporation. I have worked with leading IT companies in banking and financial services domain at global cities including London, Singapore, Mumbai, Copenhagen, Hong Kong etc.
+        </p>  
+        <p>
+        Astrology: My journey in Jyotish or Vedic astrology as popularly called, numerology and spiritual sciences began in the year 1999 and I started informal horoscope analysis in the year 2001. All through that decade, I was pursuing my full time job in the IT along-side my quest in astrology in parallel.</p>
+        <p>
+In my eventful journey of more than a decade and half as practicing astrologer, I have done consultations for people from different walks of life across various cultures and countries (thanks to the internet).
         </p>
         <p>
-          Through this platform, I aim to share knowledge, offer guidance, and help you connect with your own cosmic rhythm.
-        </p>        
+        If you wish to know more about my astrology journey or want to connect with the astrologer in me, here is my astrology page☞ AstrologyOfBharat.org
+        </p>
       </section>
 
       <aside class="contact-section">
