--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
     .nav{display:flex;gap:12px;align-items:center}
     .btn{background:var(--accent);color:white;padding:10px 16px;border-radius:10px;text-decoration:none;font-weight:600;box-shadow:var(--shadow);border:0}
     .btn-ghost{background:transparent;border:1px solid rgba(16,24,40,0.06);padding:8px 12px;border-radius:8px;text-decoration:none;color:var(--text);font-weight:500}
+    
+    /* UPDATED: Link Color Rule */
+    /* Targets all links that are NOT buttons */
+    a:not(.btn):not(.btn-ghost):not(.buy-btn):not(.modal-close) {
+      color: blue;
+    }
+
     /* HERO */
     .hero{display:grid;grid-template-columns:1fr 420px;gap:28px;align-items:center;padding:36px 0}
     .hero-left h1{font-family:Merriweather;margin:0;font-size:34px;line-height:1.05}
@@ -195,7 +202,7 @@
               <strong>Shared Future Score</strong>
               <div class="small">(0–100) — higher means smoother shared living</div>
             </div>
-            <div style="font-size:28px;color:var(--accent);font-weight:800">78</div>
+            <div id="live-score" style="font-size:28px;color:var(--accent);font-weight:800">78</div>
           </div>
           <div style="background:#fff;padding:10px;border-radius:10px;border:1px solid rgba(16,24,40,0.04)">
             <div style="display:flex;justify-content:space-between;align-items:center">
@@ -203,12 +210,12 @@
                 <div style="font-weight:700">Daily Harmony</div>
                 <div class="small">Routines, chores, rhythm</div>
               </div>
-              <div class="small" style="font-weight:700">Good</div>
+              <div id="live-harmony" class="small" style="font-weight:700">Good</div>
             </div>
           </div>
           <div style="background:linear-gradient(90deg,#fff8f2,#f7fbff);padding:10px;border-radius:10px;border:1px solid rgba(16,24,40,0.02)">
             <div style="font-weight:700">Karmic Support</div>
-            <div class="small">Long-term destiny alignment present</div>
+            <div id="live-karmic" class="small">Long-term destiny alignment present</div>
           </div>
           <div style="display:flex;flex-direction:column;gap:8px;">
             <a class="buy-btn buy-local" id="cashfree" href="https://payments.cashfree.com/forms?code=LagnaDuo" target="_blank" rel="noopener noreferrer">Buy in India — ₹1100</a>
@@ -424,6 +431,56 @@
       });
     },{threshold:0.08});
     document.querySelectorAll('.fade-up').forEach(el=>io.observe(el));
+
+    // =========================================================
+    // UPDATED LOGIC: Dynamic Score, Harmony Text, and Karmic Text
+    // =========================================================
+    function updateLiveScore() {
+      // 1. Generate random number between 15 and 72
+      const min = 15;
+      const max = 72;
+      const score = Math.floor(Math.random() * (max - min + 1)) + min;
+
+      // 2. Select the elements by ID
+      const scoreEl = document.getElementById('live-score');
+      const harmonyEl = document.getElementById('live-harmony');
+      const karmicEl = document.getElementById('live-karmic');
+
+      // 3. Update Score Display
+      if(scoreEl) scoreEl.innerText = score;
+
+      // 4. Determine Dynamic Texts
+      let harmonyText = "";
+      let karmicText = "";
+
+      // Logic Slab for Harmony and contextual Karmic text
+      if (score > 65) {
+        harmonyText = "Very strong";
+        karmicText = "Deep spiritual & destiny alignment";
+      } else if (score > 55) {
+        harmonyText = "Strong";
+        karmicText = "Solid karmic foundation";
+      } else if (score > 40) {
+        harmonyText = "Good";
+        karmicText = "Moderate destiny alignment present";
+      } else if (score > 30) {
+        harmonyText = "Average";
+        karmicText = "Partial alignment, needs effort";
+      } else if (score > 20) {
+        harmonyText = "Less";
+        karmicText = "Minor karmic friction likely";
+      } else {
+        harmonyText = "Poor";
+        karmicText = "Significant karmic challenges";
+      }
+
+      // 5. Update Text Elements
+      if(harmonyEl) harmonyEl.innerText = harmonyText;
+      if(karmicEl) karmicEl.innerText = karmicText;
+    }
+
+    // Run interval every 7 seconds
+    setInterval(updateLiveScore, 7000);
   </script>
 </body>
 </html>
